css/styles.css
body {
    margin: 0;
    padding: 0;
    font-family: "Open Sans", sans-serif;
    font-optical-sizing: auto;
    font-style: normal;
}

.container {
    width: 100%;
    height: 100vh;
    background-image: linear-gradient(to bottom right, blue, purple);
    padding: 10px;
}

.todo-app {
    width: 100%;
    max-width: 500px;
    background-color: rgb(15, 15, 15);
    margin: 100px auto 30px;
    padding: 40px 30px 30px;
    border-radius: 10px;
}

.todo-app h2 {
    color: rgb(255, 89, 69);
    font-size: 30px;
}

.task-input-section {
    display: flex;
    justify-content: space-between;

    align-items: center;
    background-color: white;
    border-radius: 20px;
}

#task-input-box {
    outline: 0;
    border: 0;
    color:rgb(51, 51, 51);
    font-size: 15px;
    font-weight: 600;
    width: 100%;
    margin: 10px;
}

.task-input-section button {
    border: 0;
    outline: 0;
    background-color:  rgb(255, 89, 69);
    width: 100px;
    height: 41px;
    border-radius: 20px;

    cursor: pointer;
}

.todo-app li {
    margin-top: 20px;
    cursor: pointer;
    user-select: none;
    list-style: none;
    color: white;
    font-size: 20px;
    position: relative;
}

.checked {
    text-decoration: line-through;
}

.ticked {
    content: "\u2713";
    background-color: rgb(255, 89, 69);
}

.cross-btn {
    position: absolute;
    right: 0;
    width: 40px;
    height: 40px;
    font-size: 20px;
    line-height: 40px;
    text-align: center;
    border-radius: 50%;
}

.tick-btn {
    position: absolute;
    width: 25px;
    height: 25px;
    font-size: 20px;
    line-height: 25px;
    text-align: center;
    border-radius: 50%;
    border: 2px solid  rgb(255, 89, 69);
    color: white;
    right: 480px;
}

.tick-btn:hover {
    background-color: rgb(255, 89, 69) ;
}

.cross-btn:hover {
    background-color: rgb(138, 138, 138);
}

